--- a/projects.html
+++ b/projects.html
@@ -23,13 +23,13 @@
             <h2>Interplanetary Explorer Mission - Orbital Mechanics (Team work)</h2>
             <p>This paper presents the development of a mission concept for Earth-to-Earth interplanetary exploration, focusing on orbital mechanics and mission feasibility. The study optimizes the transfer trajectory to a Near-Earth Object (NEO) using the patched conics method, with considerations for flybys and minimizing maneuver costs. The project involves the analysis of time windows for the mission, orbital perturbations from Earth's gravity and solar radiation pressure, and the evolution of Keplerian elements over time. A comparison with real mission data from the IRNSS 1E satellite was conducted to validate the model's accuracy.</p>
              <br><strong>My role:</strong>
-          <br><a href="Projects/OrbitalMech_group_2271_project.pdf" target="_blank">Read the paper_OM</a>
+          <br><a href="Projects/OM_project_Torre.pdf" target="_blank">Read the paper_OM</a>
         </section>
         <section class="project">
             <h2>Definition of Spacecraft Attitude for Correct Pointing - Spacecraft Attitude Dynamics (Team work)</h2>
             <p>The aim of this project is to simulate the behavior of a 6U CubeSat during its orbit. The spacecraft is equipped with a set of gyroscopes, two reaction wheels, and one inertia wheel. The mission's goal is to point towards Aldebaran, a star in the Taurus constellation, during the eclipse phase of its orbit, while charging and transmitting data to Earth during sunlight exposure. The spacecraft's dynamics and environmental disturbances were modeled, alongside the non-ideal behaviors of its sensors and actuators. A control logic was implemented to ensure precise pointing and enable switching between various targets.</p>
              <br><strong>My role:</strong>
-          <br><a href="Projects/15.pdf" target="_blank">Read the paper_SAD</a>
+          <br><a href="Projects/SAD_project_Torre.pdf" target="_blank">Read the paper_SAD</a>
         </section>
         <section class="project">
             <h2>Engine Sizing and Propellant Selection - Space Propulsion (Team work)</h2>
@@ -45,7 +45,7 @@
  engines with a combination of regenerative cooling, radiative cooling and thermal barrier
  coating.</p>
   <br><strong>My role:</strong>
-          <br><a href="Projects/2023_PROPULSON_PROJECT.pdf" target="_blank">Read the paper_SP</a>
+          <br><a href="Projects/SP_project_Torre.pdf" target="_blank">Read the paper_SP</a>
         </section>
         <section class="project">
             <h2>Reverse Engineering of the LRO Mission - Space System Engineering and Operations (Team work)</h2>
@@ -57,7 +57,7 @@
  In the following chapters, all the subsystems are analyzed and a preliminary sizing is performed for each
  case.</p>
  <br><strong>My role:</strong>
-          <br><a href="Projects/Group20_Tot.pdf" target="_blank">Read the paper_SSEO</a>
+          <br><a href="Projects/SSEO_project_Torre.pdf" target="_blank">Read the paper_SSEO</a>
         </section>
         <section class="project">
             <h2>Design of an Ultra-Rapid Transoceanic Delivery System - Launch System (Team work)</h2>
@@ -77,7 +77,7 @@ sion profile, a preliminary requirements review is conducted to assess whether t
  requirements are met by the obtained results.
 </p>
 <br><strong>My role:</strong>
-          <br><a href="[10645141]-[FLASH][2].pdf" target="_blank">Read the paper_LS</a>
+          <br><a href="LS_project_Torre.pdf" target="_blank">Read the paper_LS</a>
 		  
 		  </section>
         <section class="project">
@@ -94,19 +94,19 @@ mal force coefficient) under these conditions.
  both specifically applicable to supersonic Mach
  number scenarios.
  <br><strong>My role:</strong>
-          <br><a href="Flipped_Class_Launch.pdf" target="_blank">Read the paper_LS</a>
+          <br><a href="LS_flipped_Torre.pdf" target="_blank">Read the paper_LS</a>
         </section>
         <section class="project">
             <h2>Assignment 1 - Guidance Navigation and Control</h2>
             <p>This assignment explores advanced orbital mechanics and navigation techniques, including periodic orbits and impulsive guidance. The work involves developing navigation solutions through various methods, such as determining the x-coordinate of the Lagrange point L1, computing periodic halo orbits in the Earth-Moon system, and performing numerical continuation to analyze families of halo orbits. Additionally, impulsive guidance techniques were applied to design a planetary protection strategy for Apophis, focusing on reducing impact risk. The assignment concludes with a time-optimal Earth-Venus transfer problem, utilizing the Pontryagin Maximum Principle (PMP) and numerical continuation to optimize the spacecraft’s trajectory.</p>
-            <a href="Report_Assign1_GNC.pdf" target="_blank">Read the paper_GNC</a>
+            <a href="GNC_project1_Torre.pdf" target="_blank">Read the paper_GNC</a>
 			<h2>Assignment 2 - Guidance Navigation and Control</h2>
 			<p>This assignment delves into uncertainty propagation, batch filters, and sequential filters for spacecraft navigation. The first part involves simulating the propagation of uncertainty for two satellites, Mango and Tango, using methods such as Linearized Covariance, Unscented Transform, and Monte Carlo simulations. The goal was to assess the risk of collision by calculating relative positions and covariance over time, considering various methods for uncertainty estimation.
 
 The second part focuses on batch filtering, where the navigation solution for Mango was computed using ground station data and least squares estimation, with J2 perturbation included for improved accuracy. Different combinations of ground stations were compared to optimize navigation solutions.
 
 The third part applied sequential filtering to estimate the relative state between Mango and Tango for autonomous formation flying, employing an Unscented Kalman Filter (UKF) to process relative measurements and improve state estimation accuracy. The study concluded with the reconstruction of Tango’s absolute covariance using the relative state and covariance of Mango, demonstrating the effectiveness of the sequential filter in dynamic systems.</p>
-			<a href="Report_Assign1_GNC.pdf" target="_blank">Read the paper_GNC</a>
+			<a href="GNC_project2_Torre.pdf" target="_blank">Read the paper_GNC</a>
         </section>
         <section class="project">
             <h2>Spacecraft Structural Compliance Analysis for Ariane VI - Analysis and Testing (Team work)</h2>
@@ -117,7 +117,7 @@ The third part applied sequential filtering to estimate the relative state betwe
  Excel spreadsheets, the project contains all required analysis to be performed throughout
  the design process and theoretical verification of a satellite’s structures.</p>
   <br><strong>My role:</strong>
-          <br><a href="Projects/HIDB_Team_Analysis_Testing.pdf" target="_blank">Read the paper_AT</a>
+          <br><a href="Projects/AT_project_Torre.pdf" target="_blank">Read the paper_AT</a>
         </section>
         <section class="project">
             <h2>Plasma Flow Analysis in Magneto-Plasma Dynamic Thrusters - Aerothermodynamics</h2>
@@ -131,7 +131,7 @@ The third part applied sequential filtering to estimate the relative state betwe
  onset phenomenon in self-field MPDT. All the computations were carried out in
  Matlab using a higher order integration scheme.</p>
    <br><strong>My role:</strong>
-          <br><a href="Projects/Torre_Project_Aerothermodynamics.pdf" target="_blank">Read the paper_AT</a>
+          <br><a href="Projects/ATD_project_Torre.pdf" target="_blank">Read the paper_ATD</a>
         </section>
         <section class="project">
             <h2>Bibliographic Research on Space Debris Removal - Operation Research</h2>
@@ -144,7 +144,7 @@ The third part applied sequential filtering to estimate the relative state betwe
  study compares methodologies across recent literature, highlighting their effectiveness in
  mitigating debris-related risks and optimizing mission outcomes.</p>
     <br><strong>My role:</strong>
-          <br><a href="Projects/Torre_10645141_OR_Project" target="_blank">Read the paper_OR</a>
+          <br><a href="Projects/OR_project_Torre" target="_blank">Read the paper_OR</a>
         </section>
     </main>
     <footer>
