--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@ sion profile, a preliminary requirements review is conducted to assess whether t
  requirements are met by the obtained results.
 </p>
 <br><strong>My role:</strong>
-          <br><a href="LS_project_Torre.pdf" target="_blank">Read the paper_LS</a>
+          <br><a href="Projects/LS_project_Torre.pdf" target="_blank">Read the paper_LS</a>
 		  
 		  </section>
         <section class="project">
@@ -94,19 +94,19 @@ mal force coefficient) under these conditions.
  both specifically applicable to supersonic Mach
  number scenarios.
  <br><strong>My role:</strong>
-          <br><a href="LS_flipped_Torre.pdf" target="_blank">Read the paper_LS</a>
+          <br><a href="Projects/LS_flipped_Torre.pdf" target="_blank">Read the paper_flipped_LS</a>
         </section>
         <section class="project">
             <h2>Assignment 1 - Guidance Navigation and Control</h2>
             <p>This assignment explores advanced orbital mechanics and navigation techniques, including periodic orbits and impulsive guidance. The work involves developing navigation solutions through various methods, such as determining the x-coordinate of the Lagrange point L1, computing periodic halo orbits in the Earth-Moon system, and performing numerical continuation to analyze families of halo orbits. Additionally, impulsive guidance techniques were applied to design a planetary protection strategy for Apophis, focusing on reducing impact risk. The assignment concludes with a time-optimal Earth-Venus transfer problem, utilizing the Pontryagin Maximum Principle (PMP) and numerical continuation to optimize the spacecraft’s trajectory.</p>
-            <a href="GNC_project1_Torre.pdf" target="_blank">Read the paper_GNC</a>
+            <a href="Projects/GNC_project1_Torre.pdf" target="_blank">Read the paper_GNC</a>
 			<h2>Assignment 2 - Guidance Navigation and Control</h2>
 			<p>This assignment delves into uncertainty propagation, batch filters, and sequential filters for spacecraft navigation. The first part involves simulating the propagation of uncertainty for two satellites, Mango and Tango, using methods such as Linearized Covariance, Unscented Transform, and Monte Carlo simulations. The goal was to assess the risk of collision by calculating relative positions and covariance over time, considering various methods for uncertainty estimation.
 
 The second part focuses on batch filtering, where the navigation solution for Mango was computed using ground station data and least squares estimation, with J2 perturbation included for improved accuracy. Different combinations of ground stations were compared to optimize navigation solutions.
 
 The third part applied sequential filtering to estimate the relative state between Mango and Tango for autonomous formation flying, employing an Unscented Kalman Filter (UKF) to process relative measurements and improve state estimation accuracy. The study concluded with the reconstruction of Tango’s absolute covariance using the relative state and covariance of Mango, demonstrating the effectiveness of the sequential filter in dynamic systems.</p>
-			<a href="GNC_project2_Torre.pdf" target="_blank">Read the paper_GNC</a>
+			<a href="Projects/GNC_project2_Torre.pdf" target="_blank">Read the paper_GNC</a>
         </section>
         <section class="project">
             <h2>Spacecraft Structural Compliance Analysis for Ariane VI - Analysis and Testing (Team work)</h2>
@@ -116,7 +116,7 @@ The third part applied sequential filtering to estimate the relative state betwe
  such Finite Element Models of the Launch Vehicle and the Spacecraft, Matlab codes and
  Excel spreadsheets, the project contains all required analysis to be performed throughout
  the design process and theoretical verification of a satellite’s structures.</p>
-  <br><strong>My role:</strong>
+<br><strong>My role:</strong>
           <br><a href="Projects/AT_project_Torre.pdf" target="_blank">Read the paper_AT</a>
         </section>
         <section class="project">
@@ -130,8 +130,7 @@ The third part applied sequential filtering to estimate the relative state betwe
  itted geometries for alleviating the instability phenomenon commonly known as
  onset phenomenon in self-field MPDT. All the computations were carried out in
  Matlab using a higher order integration scheme.</p>
-   <br><strong>My role:</strong>
-          <br><a href="Projects/ATD_project_Torre.pdf" target="_blank">Read the paper_ATD</a>
+<a href="Projects/ATD_project_Torre.pdf" target="_blank">Read the paper_ATD</a>
         </section>
         <section class="project">
             <h2>Bibliographic Research on Space Debris Removal - Operation Research</h2>
@@ -143,8 +142,7 @@ The third part applied sequential filtering to estimate the relative state betwe
  addressing the complexities of debris removal in densely populated orbital regions. The
  study compares methodologies across recent literature, highlighting their effectiveness in
  mitigating debris-related risks and optimizing mission outcomes.</p>
-    <br><strong>My role:</strong>
-          <br><a href="Projects/OR_project_Torre" target="_blank">Read the paper_OR</a>
+<a href="Projects/OR_project_Torre.pdf" target="_blank">Read the paper_OR</a>
         </section>
     </main>
     <footer>
