--- a/projects.html
+++ b/projects.html
@@ -22,13 +22,11 @@
         <section class="project">
             <h2>Interplanetary Explorer Mission - Orbital Mechanics (Team work)</h2>
             <p>This paper presents the development of a mission concept for Earth-to-Earth interplanetary exploration, focusing on orbital mechanics and mission feasibility. The study optimizes the transfer trajectory to a Near-Earth Object (NEO) using the patched conics method, with considerations for flybys and minimizing maneuver costs. The project involves the analysis of time windows for the mission, orbital perturbations from Earth's gravity and solar radiation pressure, and the evolution of Keplerian elements over time. A comparison with real mission data from the IRNSS 1E satellite was conducted to validate the model's accuracy.</p>
-             <br><strong>My role:</strong>
           <br><a href="Projects/OM_project_Torre.pdf" target="_blank">Read the paper_OM</a>
         </section>
         <section class="project">
             <h2>Definition of Spacecraft Attitude for Correct Pointing - Spacecraft Attitude Dynamics (Team work)</h2>
             <p>The aim of this project is to simulate the behavior of a 6U CubeSat during its orbit. The spacecraft is equipped with a set of gyroscopes, two reaction wheels, and one inertia wheel. The mission's goal is to point towards Aldebaran, a star in the Taurus constellation, during the eclipse phase of its orbit, while charging and transmitting data to Earth during sunlight exposure. The spacecraft's dynamics and environmental disturbances were modeled, alongside the non-ideal behaviors of its sensors and actuators. A control logic was implemented to ensure precise pointing and enable switching between various targets.</p>
-             <br><strong>My role:</strong>
           <br><a href="Projects/SAD_project_Torre.pdf" target="_blank">Read the paper_SAD</a>
         </section>
         <section class="project">
@@ -44,7 +42,7 @@
  nozzles in addition to pressure-fed feeding lines. It is considered a cooling strategy for the
  engines with a combination of regenerative cooling, radiative cooling and thermal barrier
  coating.</p>
-  <br><strong>My role:</strong>
+  <br><strong>My role:</strong> Propellant Selection: Using the NASA CEA code to assess the performance of various green propellants in comparison to hydrazine.
           <br><a href="Projects/SP_project_Torre.pdf" target="_blank">Read the paper_SP</a>
         </section>
         <section class="project">
@@ -56,7 +54,8 @@
  are defined. Also the trajectory design has been analysed in order to validate the ∆v breakdown.
  In the following chapters, all the subsystems are analyzed and a preliminary sizing is performed for each
  case.</p>
- <br><strong>My role:</strong>
+ <br><strong>My role:</strong> Functional analysis,Propulsion system, Attitude and Orbit Control Subsystem (AOCS), Electric and Power Subsystem, and Spacecraft Configuration.
+
           <br><a href="Projects/SSEO_project_Torre.pdf" target="_blank">Read the paper_SSEO</a>
         </section>
         <section class="project">
@@ -76,7 +75,7 @@ sion analysis to fix the mission’s main features. The rocket can be then desig
 sion profile, a preliminary requirements review is conducted to assess whether the customer’s
  requirements are met by the obtained results.
 </p>
-<br><strong>My role:</strong>
+<br><strong>My role:</strong> House of quality,Staging, Aerodynamics of the launcher.
           <br><a href="Projects/LS_project_Torre.pdf" target="_blank">Read the paper_LS</a>
 		  
 		  </section>
@@ -93,7 +92,6 @@ mal force coefficient) under these conditions.
  Paneling Method 2 and Jorgensen’s Method 3,
  both specifically applicable to supersonic Mach
  number scenarios.
- <br><strong>My role:</strong>
           <br><a href="Projects/LS_flipped_Torre.pdf" target="_blank">Read the paper_flipped_LS</a>
         </section>
         <section class="project">
@@ -116,7 +114,7 @@ The third part applied sequential filtering to estimate the relative state betwe
  such Finite Element Models of the Launch Vehicle and the Spacecraft, Matlab codes and
  Excel spreadsheets, the project contains all required analysis to be performed throughout
  the design process and theoretical verification of a satellite’s structures.</p>
-<br><strong>My role:</strong>
+<br><strong>My role:</strong> Modal analysis, Static analysis.
           <br><a href="Projects/AT_project_Torre.pdf" target="_blank">Read the paper_AT</a>
         </section>
         <section class="project">
