--- a/experience.html
+++ b/experience.html
@@ -19,19 +19,25 @@
         </nav>
     </header>
     <main>
+	<p> Below are the details of all the research projects. For other experiences, please refer to the CV.
         <section id="neutron-star-systems">
-            <h2>Neutron Star Systems, Munich, Ottobrunn (MU)</h2>
-            <p>Researched and developed electric propulsion systems, specifically focusing on AF-MPD thrusters for Neutron Star Systems. Tasks included plasma simulation, thermal analysis, and system integration, contributing significantly to the prototype development.</p>
+            <h2>Neutron Star Systems, Munich, Ottobrunn (MU), Germany - Master’s Thesis Research</h2>
+            <br><strong>Abstract:</strong>
+Multimode propulsion integrates multiple propulsion modes, utilizing a shared propellant, into a single spacecraft propulsion system. This technology is rapidly emerging as a critical enabler, offering superior performance and versatility for a wide array of space missions. Multimode propulsion offers distinct advantages, including operational flexibility and adaptability, primarily due to its shared propellant system. These benefits extend across all spacecraft sizes, with particular emphasis on mass savings in smaller spacecraft. Further mass reduction is achievable through hardware sharing between propulsion modes, especially in small satellite configurations.
+This study explores a multimode propulsion system combining a ceramic chemical thruster, based on a water electrolysis propulsion system (WEP) currently under development at the Institute of Space Systems, University of Stuttgart, and the SUPREME (AF-MPD) electric thruster developed through collaboration between the University of Stuttgart and Neutron Star Systems. Water is selected as the propellant, and the proposed system incorporates a unified multimode design to optimize performance.
+To assess the propulsion system's design, a 0D plasma-thermal model is developed to characterize the hydrogen-fed cathode. Additionally, numerical algorithms are formulated to design low-to-high thrust collision avoidance maneuvers during short-term orbital encounters. The conjunction dynamics are modeled in a three-dimensional space and subsequently projected onto the B-plane, centered on the secondary object. Optimal energy- and fuel-efficient maneuvers are computed by constraining the collision probability or miss distance. An analytical approach is employed for energy-optimal maneuver design, providing a robust initial estimate for solving the fuel-optimal maneuver problem. The proposed work assesses the impact and advantages of multimode propulsion, specifically for collision avoidance maneuvers.
+</p>
         </section>
         <section id="institute-space-systems">
-            <h2>Institute of Space Systems, University of Stuttgart, Stuttgart (ST)</h2>
-            <p>Engaged in a collaborative project at the Institute of Space Systems where I worked on the development of space mission analysis tools and conducted research on thermal protection systems for re-entry vehicles. My contributions helped enhance model accuracy and simulation reliability.</p>
+            <h2>Institute of Space Systems, University of Stuttgart, Stuttgart (ST),Germany - Master’s Thesis Research</h2>
+            <br><strong>Note:</strong> Refer to the Neutron Star Systems Experience Abstract. 
         </section>
         <section id="italblowers">
-            <h2>ItalBlowers, Pieve Emanuele (MI)</h2>
-            <p>Served as a mechanical engineer focusing on the design and optimization of industrial blowers. Responsibilities included CAD modeling, performance testing, and improvements to design processes that resulted in a 20% reduction in production costs and time.</p>
-        </section>
-        <!-- Add more sections as needed for other experiences -->
+            <h2>ItalBlowers, Pieve Emanuele (MI), Italy - </h2>
+            <p>The fluid dynamics principles affecting blower performance were investigated, focusing on pressure differentials, flow efficiency, and noise generation. The continuity equation, Bernoulli’s principle, and momentum equations were applied to analyze fluid behavior in blower systems. Soundproof blower enclosures were designed in CATIA V5, with geometries optimized for enhanced acoustic damping. The system performance was analyzed using the slip factor, evaluating losses due to friction, recirculation, and clearance.</p>
+			<a href="BT/Short_intro_BT_Torre.pdf" target="_blank">Read the paper</a>
+			<br><strong>Note:</strong> The paper is a brief introduction to the thesis, in which the topics are outlined (the introduction is in Italian).
+		</section>
     </main>
     <footer>
         <p>Contact me at: <a href="mailto:federico.torre@mail.polimi.it">federico.torre@mail.polimi.it</a></p>
