--- a/experience.html
+++ b/experience.html
@@ -33,7 +33,7 @@ To assess the propulsion system's design, a 0D plasma-thermal model is developed
             <br><strong>Note:</strong> Refer to the Neutron Star Systems Experience Abstract. 
         </section>
         <section id="italblowers">
-            <h2>ItalBlowers, Pieve Emanuele (MI), Italy - </h2>
+            <h2>ItalBlowers, Pieve Emanuele (MI), Italy - Bachelor’s Thesis Research </h2>
             <p>The fluid dynamics principles affecting blower performance were investigated, focusing on pressure differentials, flow efficiency, and noise generation. The continuity equation, Bernoulli’s principle, and momentum equations were applied to analyze fluid behavior in blower systems. Soundproof blower enclosures were designed in CATIA V5, with geometries optimized for enhanced acoustic damping. The system performance was analyzed using the slip factor, evaluating losses due to friction, recirculation, and clearance.</p>
 			<a href="BT/Short_intro_BT_Torre.pdf" target="_blank">Read the paper</a>
 			<br><strong>Note:</strong> The paper is a brief introduction to the thesis, in which the topics are outlined (the introduction is in Italian).
